# matter-toolkit

./: .gitignore  README.md
bridge/: Cargo.toml
bridge/src/: lib.rs  light_on_off.rs  main.rs  mdns.rs
client/: Cargo.toml
client/src/: app.rs  invoker.rs  main.rs  main_connect.rs  main_list.rs  matter.rs  network.rs  setup_code.rs  state.rs  types.rs  ui.rs  utils.rs
matc-patched/: .cargo_vcs_info.json  Cargo.toml
rs-matter-patched/: Cargo.toml
rs-matter-patched/src/: utils.rs
rs-matter-patched/src/transport/: dedup.rs
rs-matter-patched/src/utils/: bitflags.rs
