[package]
name = "matter-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
async-io = "2"
embassy-time = { version = "0.5", features = ["std", "generic-queue-64"] }
env_logger = "0.11"
if-addrs = "0.15"
log = "0.4"
rand = { version = "0.8", features = ["std", "std_rng"] }
rs-matter = { git = "https://github.com/project-chip/rs-matter", rev = "ab5fbec10a86b0ed845e763181b4ddf5511510ca", features = ["async-io", "max-groups-per-fabric-12", "max-group-keys-per-fabric-2", "max-group-endpoints-per-fabric-3"] }
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
