[package]
name = "matter-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
env_logger = "0.11"
crossterm = "0.28"
flume = "0.11"
mdns-sd = "0.13"
matc = { path = "vendor/matc" }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
