[package]
name = "matter-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
env_logger = "0.11"
crossterm = "0.29"
flume = "0.11"
mdns-sd = "0.19"
matc = { version = "0.1.3" }
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"


[[bin]]
path = "src/main.rs"
name = "clientui"

[[bin]]
path = "src/invoker.rs"
name = "invoker"
